Final update - maybe

--- a/Black_Tee_First.html
+++ b/Black_Tee_First.html
@@ -46,8 +46,9 @@
                 <option value="Choose size">Choose size</option>
             </select>
             <br><br>
-            <button class="button3"> <h3> Add to basket </h3></button>
+           
         </form>
+          <button class="button3 add-to-cart"> <h3> Add to basket </h3></button>
     </section>
 
 
