--- a/basket.html
+++ b/basket.html
@@ -41,7 +41,7 @@
                 <img src="images/White_Hoodie_Bright_1.jpg" alt="White hoodie from 'Bright Series'" class="cart-item-image">
                 <span class="cart-item-title"> White hoodie - 'Bright Series'</span>
             </div>
-            <span class="cart-price cart-column">499</span>
+            <span class="cart-price cart-column">499,00 kr.</span>
             <div class="cart-quantity cart-column">
                 <input class="cart-quantity-input" type="number" value="1" min="1">
                 <button class="btn btn-danger button3" type="button">Remove</button>
@@ -52,36 +52,27 @@
     <div class="cart-items">
         <div class="cart-row">
             <div class="cart-item cart-column">
-                <img src="images/White_Hoodie_Bright_1.jpg" alt="White hoodie from 'Bright Series'" class="cart-item-image">
-                <span class="cart-item-title"> White hoodie - 'Bright Series'</span>
+                <img src="images/White_Tee_Bright_1.jpg" alt="White tee from 'Bright Series'" class="cart-item-image">
+                <span class="cart-item-title"> White tee - 'Bright Series'</span>
             </div>
-            <span class="cart-price cart-column">149</span>
+            <span class="cart-price cart-column">199,00 kr.</span>
             <div class="cart-quantity cart-column">
                 <input class="cart-quantity-input" type="number" value="2" min="1">
                 <button class="btn btn-danger button3" type="button">Remove</button>
             </div>
         </div>
     </div>
-    <div class="cart-total">
-        <strong class="cart-total-title">Total</strong>
-        <span class="cart-total-price">000</span>
-    </div>
 
 
-    <section class="basket_pay">
+    <section class="cart-total">
         <div class="check_out"> <button class="button1"><h3>PAY NOW</h3> <hr></button></div>
-        <div class="sub_price">
-            <h2>Sub-total:</h2>
-            <p> 0000
-                <p>
-        </div>
         <div class="delivery_price">
             <h2>Shipping:</h2>
-            <p> 00000</p>
+            <p> 69,00 kr.</p>
         </div>
         <div class="total_price">
-            <h2>Total price:</h2>
-            <p> 00000</p>
+            <h2 class="cart-total-title">Total price:</h2>
+            <p class="cart-total-price">767,00 kr. </p>
         </div>
     </section>
 
