--- a/black-cap.html
+++ b/black-cap.html
@@ -46,8 +46,8 @@
                 <option value="Choose size">One size</option>
             </select>
             <br><br>
-            <button class="button3"> <h3> Add to basket </h3></button>
         </form>
+          <button class="button3 add-to-cart"> <h3> Add to basket </h3></button>
     </section>
 
 
