--- a/black-tee-dystopia.html
+++ b/black-tee-dystopia.html
@@ -36,7 +36,7 @@
     <section class="product_intro">
         <h1>T-Shirt <br> 'Dystopia Series'</h1>
         <h2>249,00 kr.</h2>
-        <img src="images/Black_Tee_SoMe_2.jpg" alt="Social Media t-shirt">
+        <img src="images/Black_Tee_SoMe_1.jpg" alt="Social Media t-shirt">
         
         <form action="/action_page.php">
             <select name="Size" class="size">
@@ -47,8 +47,8 @@
                 <option value="X-Large">XL</option>
             </select>
             <br><br>
-            <button class="button3"> <h3> Add to basket </h3></button>
         </form>
+         <button class="button3 add-to-cart"> <h3> Add to basket </h3></button>
     </section>
 
 
