--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
         
         <section>    
-            <a href="military-belt.html"><img src="images/B%C3%A6lter.jpg" alt="Military Bælte"></a>
+            <a href="military-belt.html"><img src="images/belt.jpg" alt="Military Belt"></a>
         <a href="military-belt.html"><p class="price">199,90 kr.</p></a>
         <a href="military-belt.html"><p class="name">Military belt</p></a>
         </section>
