--- a/white-hoodie.html
+++ b/white-hoodie.html
@@ -52,8 +52,8 @@
                 <option value="X-Large">XL</option>
             </select>
             <br><br>
-        </form>
-         <button class="button3 shop-item-button"> <h3> Add to basket </h3></button>
+        </form> 
+        <button class="button3 add-to-cart"> <h3> Add to basket </h3></button>
     </section>
 
 
