--- a/military-belt.html
+++ b/military-belt.html
@@ -36,7 +36,7 @@
     <section class="product_intro">
         <h1>Military belt</h1>
         <h2>199,90 kr.</h2>
-        <img src="images/B%C3%A6lter.jpg" alt="Military belt">
+        <img src="images/belt.jpg" alt="Military belt">
         <!--
         <button class="button1"><h3>Choose size</h3> <hr></button> <br>
         <button class="button3"><h3>Add to basket</h3></button>
@@ -46,8 +46,8 @@
                 <option value="Choose size">One size</option>
             </select>
             <br><br>
-            <button class="button3"> <h3> Add to basket </h3></button>
         </form>
+         <button class="button3 add-to-cart"> <h3> Add to basket </h3></button>
     </section>
 
 
