--- a/products.html
+++ b/products.html
@@ -104,7 +104,7 @@
         <div class="flex_2">
 
             <section class="filterDiv accessory">
-                <a href="military-belt.html"><img src="images/B%C3%A6lter.jpg" alt="Military Bælte"></a>
+                <a href="military-belt.html"><img src="images/belt.jpg" alt="Military Belt"></a>
                 <a href="military-belt.html">
                     <p class="price">199,90 kr.</p>
                 </a>
